# codetoad

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODOS.md  banner.txt
.github/workflows/: hugo-deploy.yml
site/: hugo.toml
site/content/posts/: hello.md
site/public/: 404.html  index.html  index.xml  sitemap.xml
site/public/categories/: index.html  index.xml
site/public/posts/: index.html  index.xml
site/public/posts/hello/: index.html
site/public/tags/: index.html  index.xml
site/public/tags/blog/: index.html  index.xml
site/themes/terminal/: .gitignore
site/themes/terminal/assets/css/: terminal.css
site/themes/terminal/layouts/partials/: head.html
src/: agent.rs  agent_policy.rs  agent_stream.rs  app_context.rs  cli.rs  confirmation.rs  custom_instructions.rs  git_ops.rs  grok_client.rs  image_input.rs  inline_feedback.rs  inline_markdown.rs  inline_prompt.rs  inline_ui.rs  lib.rs  main.rs  message_projection.rs  model_client.rs  onboarding.rs  protocol.rs  provider.rs  responses_adapter.rs  session_store.rs  settings.rs  slash_commands.rs  tool_catalog.rs  tool_context.rs  tools.rs  tui.rs
src/tools/: bash_tool.rs  file_ops.rs  mod.rs  search_tool.rs  todos.rs
src/ui/: feedback.rs  inline.rs  markdown.rs  mod.rs  prompt.rs
tests/: cli_smoke.rs  command_flow.rs  settings_keychain.rs  settings_persistence.rs
