[package]
name = "grok-build"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.4"
dirs = "6.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
