[package]
name = "codetoad"
version = "0.1.0"
edition = "2024"

[features]
default = []
keychain-integration-tests = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.4"
dirs = "6.0"
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"

